<resources>
    <string name="app_name">Расписание</string>

    <string name="main_activity_this_day_mon">Понедельник</string>
    <string name="main_activity_this_day_tues">Вторник</string>
    <string name="main_activity_this_day_wed">Среда</string>
    <string name="main_activity_this_day_thurs">Четверг</string>
    <string name="main_activity_this_day_fri">Пятница</string>
    <string name="main_activity_this_day_sat">Суббота</string>
    <string name="main_activity_this_day_sun">Воскресенье</string>

    <string name="main_activity_week1">Неделя 1</string>
    <string name="main_activity_week2">Неделя 1</string>
    <string name="main_activity_day_off">Выходной день</string>

    <string name="list_activity_empty">Список пуст</string>

    <string name="nav_main_btn_lesson">Занятия</string>
    <string name="nav_main_btn_teacher">Преподаватели</string>
    <string name="nav_main_btn_schedule">Расписание</string>
    <string name="nav_main_btn_homework">Домашняя работа</string>
    <string name="nav_main_btn_settings">Настройки</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="dialog_delete_title">Удалить элемент(ы)?</string>
    <string name="dialog_delete_btn_positive">Удалить</string>
    <string name="dialog_delete_btn_negative">Отмена</string>
    <string name="dialog_class_title">Введите аудиторию</string>
    <string name="dialog_class_input">Номер аудитории</string>
    <string name="dialog_class_btn_positive">Добавить</string>
    <string name="dialog_class_btn_negative">Отмена</string>
    <string name="dialog_lesson_input">Предмет</string>
    <string name="dialog_teacher_input">Преподаватель</string>
    <string name="dialog_week_title">Выберите неделю</string>
    <string name="dialog_every_week">Каждую неделю</string>

    <string name="tab_title_mon">ПН</string>
    <string name="tab_title_tues">ВТ</string>
    <string name="tab_title_wed">СР</string>
    <string name="tab_title_thurs">ЧТ</string>
    <string name="tab_title_fri">ПТ</string>
    <string name="tab_title_sat">СБ</string>

    <string name="schedule_clock_start">Начало</string>
    <string name="schedule_clock_end">Конец</string>
    <string name="schedule_lesson">Предмет</string>
    <string name="schedule_lesson_type">Тип</string>
    <string name="schedule_teacher">Преподаватель</string>
    <string name="schedule_class">Аудитория</string>
    <string name="schedule_week">Неделя</string>

    <string name="homework_title">Домашнее задание</string>
    <string name="homework_add_date">Добавлено:</string>
    <string name="homework_to_date">Выполнить к:</string>
    <string name="homework_choose_date">Выбрать дату</string>
    <string name="homework_hint_task">Задания</string>


    <string name="title_activity_settings">Настройки</string>
    <string name="category_one_title">Основные настройки</string>
    <string name="number_0f_week">Число повторяющихся недель</string>
    <string name="info_number_0f_week">Это чисто соответствует количеству недель, которые повторяются.
        Если ваше расписание каждую неделю одно и то же, вам нужно выбрать "1", что означает, что повторятся будет только одна неделя.
        Или, например, если у вас есть неделя А и неделя Б, вам нужно выбрать "2", что означает, что недели будут повторяться как АБАБАБ…</string>
    <string name="this_week">Текущая неделя</string>
    <string name="week1">Неделя 1</string>
    <string name="week2">Неделя 2</string>
    <string name="ever_week">Каждую неделю</string>
    <string name="theme_title">Тёмная тема</string>
</resources>
