<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_dialog"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_class_title"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDialog"
        android:layout_below="@+id/title_dialog"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_class_input"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_below="@+id/textInputLayoutDialog"
        android:id="@+id/ll_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_btn_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_class_btn_negative"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:theme="@style/AppTheme.ButtonNegative"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:cornerRadius="8dp"
                android:padding="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_btn_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_class_btn_positive"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:cornerRadius="8dp"
                android:padding="15dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>