<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddScheduleActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:navigationIcon="@drawable/ic_back"
            app:menu="@menu/toolbar_menu"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lesson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/schedule_lesson">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_lesson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/schedule_teacher"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/schedule_class"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/tv_clock_schedule_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/ic_clock"/>

                <TextView
                    android:id="@+id/tv_clock_start_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:hint="@string/schedule_clock_start"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="15dp"
                    android:layout_height="2dp"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:background="?android:attr/textColor"/>

                <TextView
                    android:id="@+id/tv_clock_end_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/schedule_clock_end"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
            </TableRow>

            <TableRow
                android:id="@+id/tr_week_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/tv_week_schedule_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/ic_calendar_sync" />

                <TextView
                    android:id="@+id/tv_week_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text=""
                    android:hint="@string/schedule_week"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginStart="15dp"
                    android:id="@+id/iv_indicator_week_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_checkbox_unselect"/>
            </TableRow>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_done_fab"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:borderWidth="0dp"
        android:backgroundTint="@color/colorNotActive"/>
</RelativeLayout>